--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ author:
   avatar           : "profile.png"
   name             : "Haoran Sun"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "天雨流芳"
+  location         : "Guangdong,China"
+  employer         : "Shenzhen University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "sunhaoran2022@email.szu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
