--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Haoran Sun.png"
+  avatar           : "HaoranSun.png"
   name             : "Haoran Sun"
   pronouns         : # example: "she/her"  
   bio              : "天雨流芳"
